add(): 应用上下文、自动识别、资源加载、扩展机制的实现。